--- a/css/style.css
+++ b/css/style.css
@@ -7284,10 +7284,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #ffcdcd; }
+  color: #78d5ef; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #ffcdcd;
+    color: #78d5ef;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -7297,7 +7297,7 @@ h1, h2, h3, h4, h5,
   font-weight: 400; }
 
 .text-primary {
-  color: #ffcdcd !important; }
+  color: #78d5ef !important; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -7383,10 +7383,10 @@ h1, h2, h3, h4, h5,
       display: inline-block;
       color: #fff; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #ffcdcd;
-      border: 1px solid #ffcdcd; }
+      background: #78d5ef;
+      border: 1px solid #78d5ef; }
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored span {
-    border-color: #ffcdcd; }
+    border-color: #78d5ef; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
     color: rgba(255, 255, 255, 0.5); }
   .ftco-navbar-light .navbar-toggler {
@@ -7407,10 +7407,10 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #ffcdcd !important; }
+      color: #78d5ef !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #ffcdcd;
+      background: #78d5ef;
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -7425,7 +7425,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #ffcdcd; }
+      border-color: #78d5ef; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -7451,7 +7451,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #000000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #ffcdcd !important; }
+        color: #78d5ef !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -7544,7 +7544,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #ffcdcd !important;
+      color: #78d5ef !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
@@ -7658,7 +7658,7 @@ h1, h2, h3, h4, h5,
             content: '';
             width: 3px;
             height: 80px;
-            background: #ffcdcd; }
+            background: #78d5ef; }
         .owl-carousel.home-slider .slider-item .slider-text h1 {
           font-size: 40px;
           color: #fff;
@@ -7762,7 +7762,7 @@ h1, h2, h3, h4, h5,
   background: #fafafa !important; }
 
 .bg-primary {
-  background: #ffcdcd; }
+  background: #78d5ef; }
 
 .ftc-no-pb {
   padding-bottom: 0 !important; }
@@ -7778,20 +7778,20 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #ffcdcd;
-    border: 1px solid #ffcdcd;
+    background: #78d5ef;
+    border: 1px solid #78d5ef;
     color: #fff; }
     .btn.btn-primary:hover {
-      border: 1px solid #ffcdcd;
+      border: 1px solid #78d5ef;
       background: transparent;
-      color: #ffcdcd; }
+      color: #78d5ef; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #ffcdcd;
+      border: 1px solid #78d5ef;
       background: transparent;
-      color: #ffcdcd; }
+      color: #78d5ef; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #ffcdcd;
+        background: #78d5ef;
         color: #fff; }
   .btn.btn-white {
     background: #fff;
@@ -7799,7 +7799,7 @@ h1, h2, h3, h4, h5,
     color: #000000; }
     .btn.btn-white:hover, .btn.btn-white:focus, .btn.btn-white:active {
       border: 1px solid #fff;
-      color: #ffcdcd; }
+      color: #78d5ef; }
     .btn.btn-white.btn-outline-white {
       border-color: rgba(255, 255, 255, 0.8);
       background: none;
@@ -7812,12 +7812,12 @@ h1, h2, h3, h4, h5,
       .btn.btn-white.btn-outline-white:hover, .btn.btn-white.btn-outline-white:focus, .btn.btn-white.btn-outline-white:active {
         background: #fff;
         border-color: #fff;
-        color: #ffcdcd; }
+        color: #78d5ef; }
 
 .btn-custom {
   font-weight: 500;
-  color: #ff9a9a;
-  border-bottom: 4px solid #ffe1e1; }
+  color: #78d5ef;
+  border-bottom: 4px solid #78d5ef; }
 
 .ftco-services {
   margin-top: -50px;
@@ -7835,7 +7835,7 @@ h1, h2, h3, h4, h5,
       position: relative;
       width: 100px;
       height: 100px;
-      background: #ffcdcd;
+      background: #78d5ef;
       -webkit-border-radius: 50%;
       -moz-border-radius: 50%;
       -ms-border-radius: 50%;
@@ -7899,7 +7899,7 @@ h1, h2, h3, h4, h5,
     width: 80px;
     height: 80px;
     margin: 0 auto;
-    background: #ffcdcd;
+    background: #78d5ef;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
@@ -7935,7 +7935,7 @@ h1, h2, h3, h4, h5,
   margin-bottom: 0; }
 
 .staff .text .position {
-  color: #ffcdcd;
+  color: #78d5ef;
   display: block; }
 
 .ftco-social {
@@ -7973,7 +7973,7 @@ h1, h2, h3, h4, h5,
     .blog-entry .text .heading a {
       color: #000000; }
       .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-        color: #ffcdcd; }
+        color: #78d5ef; }
   .blog-entry .text .meta-chat {
     color: #b3b3b3; }
   .blog-entry .text .read {
@@ -8002,7 +8002,7 @@ h1, h2, h3, h4, h5,
     margin-bottom: 4px;
     font-weight: 400; }
     .block-27 ul li a, .block-27 ul li span {
-      border: 1px solid #ffcdcd;
+      border: 1px solid #78d5ef;
       text-align: center;
       display: inline-block;
       width: 40px;
@@ -8010,7 +8010,7 @@ h1, h2, h3, h4, h5,
       line-height: 40px;
       border-radius: 50%; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #ffcdcd;
+      background: #78d5ef;
       color: #fff;
       border: 1px solid transparent; }
 
@@ -8050,7 +8050,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #ffcdcd !important; }
+  background: #78d5ef !important; }
 
 .about-author .desc h3 {
   font-size: 24px; }
@@ -8085,8 +8085,11 @@ textarea.form-control {
       border: 2px solid #fff !important; }
   .ftco-footer p {
     color: rgba(255, 255, 255, 0.7); }
+    
+
   .ftco-footer a {
     color: rgba(255, 255, 255, 0.7); }
+
     .ftco-footer a:hover {
       color: #fff; }
   .ftco-footer .ftco-heading-2 {
@@ -8126,12 +8129,12 @@ textarea.form-control {
   .footer-small-nav > li a {
     margin: 0 10px 10px 0; }
     .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-      color: #ffcdcd; }
+      color: #78d5ef; }
 
 .media .ftco-icon {
   width: 100px; }
   .media .ftco-icon span {
-    color: #ffcdcd; }
+    color: #78d5ef; }
 
 #map {
   height: 400px;
@@ -8187,7 +8190,7 @@ textarea.form-control {
     width: 100%;
     height: 1px;
     content: '';
-    background: #ffcdcd; }
+    background: #78d5ef; }
 
 .heading-section.heading-section-white .subheading {
   color: rgba(255, 255, 255, 0.7); }
@@ -8271,7 +8274,7 @@ textarea.form-control {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.2); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #ffcdcd; }
+        background: #78d5ef; }
 
 .testimony-wrap {
   display: block;
@@ -8296,7 +8299,7 @@ textarea.form-control {
       -ms-border-radius: 50%;
       border-radius: 50%; }
       .testimony-wrap .user-img .quote i {
-        color: #ffcdcd; }
+        color: #78d5ef; }
   .testimony-wrap .name {
     font-weight: 400;
     font-size: 18px;
@@ -8317,7 +8320,7 @@ textarea.form-control {
       content: '';
       width: 3px;
       height: 30px;
-      background: #ffcdcd; }
+      background: #78d5ef; }
 
 @media (max-width: 767.98px) {
   .about-image {
@@ -8383,7 +8386,7 @@ textarea.form-control {
     display: block;
     font-size: 72px;
     font-weight: bold;
-    color: #ffcdcd; }
+    color: #78d5ef; }
   .ftco-counter .ftco-label {
     font-size: 12px;
     text-transform: uppercase;
@@ -8479,7 +8482,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #ffcdcd; }
+        color: #78d5ef; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 12px;
@@ -8579,7 +8582,7 @@ textarea.form-control {
     transform: translateY(-50%); }
 
 .subs-wrap {
-  background: #ffcdcd !important;
+  background: #78d5ef !important;
   display: block;
   width: 100%;
   color: rgba(255, 255, 255, 0.7); }
